fixed the alignement on the skilss paragraph and dixed spelling errors

--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,6 @@ h4{
 	letter-spacing: 2px;
 	font-size: 20px;
 }
-.newslatter form{
-	width: 380px;
-	max-width: 100%;
-	position: relative;
-}
 .newslatter form input:first-child{
 	display: inline-block;
 	width: 100%;
@@ -187,7 +182,7 @@ button:hover{
 	margin: 15px;
 	position: relative;
 	overflow: hidden;
-	text-align: center;
+	
 }
 .card i{
 	font-size: 50px;
@@ -201,12 +196,15 @@ h5{
 	color: white;
 	font-size: 23px;
 	margin-bottom: 15px;
+	text-align: center;
 }
 .pra p{
 	color: #fcfc;
 	font-size: 16px;
 	line-height: 27px;
 	margin-bottom: 25px;
+	text-align: flex-start;
+	justify-content: flex-start;
 }
 .card .button{
 	background-color:#f9004d;
@@ -217,6 +215,7 @@ h5{
 	padding: 9px 22px;
 	border-radius: 30px;
 	transition: .4s; 
+	text-align: center;
 }
 .card .button:hover{
 	background-color: transparent;
@@ -268,16 +267,20 @@ footer p:nth-child(1){
 	color: white;
 	margin-bottom: 20px;
 	font-weight: bold;
+	width: 500px;
+	text-align: center
+
 }
 footer p:nth-child(2){
 	color: white;
 	font-size: 17px;
 	width: 500px;
-	text-align: center;
 	line-height: 26px;
 }
 .social{
 	display: flex;
+	text-align: center
+	
 }
 .social a{
 	width: 45px;
